--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,21 +3,25 @@ name: CI
 on:
   push:
     branches:
-        - master
+      - master
   pull_request:
     branches:
-        - master
+      - master
 
 jobs:
-    build:
-        name: 'Build and Push'
-        runs-on: ubuntu-latest
-        
-        steps:
-            - name: Checkout source code
-              uses: actions/checkout@v4
+  build:
+    name: 'Build and Push'
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            - name: Setup NodeJs
-              uses: actions/setup-node@v4
-              with:
-                node-version: '22
+      - name: Setup NodeJs
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'yarn'
+            
+      - name: Install dependencies
+        run: yarn  
